# openexr-bind

./: CMakeLists.txt  README.md  pyilmbase_configure.patch
src/: example.cpp  t.py
tests/: run_pytest.sh  unit.py
